tests/suite/snapshots/suite__check__tests__check__bad_class_shadowing_6.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_shadowing_6.xi:3:5]
   │
 3 │     a() {}
   ·     ───┬──  
   ·        ╰──── Name already bound in environment
───╯

